/**
 * \file Action.h
 */

#ifndef Action_h
#define Action_h


class Action {
public:
    Action()
    {
        // @todo
    }
};

#endif // Action_h
