/**
 * \file ActiveEffect.h
 */

#ifndef ActiveEffect_h
#define ActiveEffect_h

#include "Effect.h"

class ActiveEffect: public Effect {
  private:
  protected:
  public:
    int startTurn;

  public:
    ActiveEffect(): Effect()
    {
      // @todo
    }
    // Public methods


  // Protected methods
  protected:

  // Private methods
  private:
};

#endif // ActiveEffect_h
