/**
 * \file MapResource.h
 */

#ifndef MapResource_h
#define MapResource_h

#include "InteractiveObject.h"

class MapResource: public InteractiveObject {
  private:
  protected:
    int resourceId;
  public:

  public:
    MapResource(): InteractiveObject()
    {
      // @todo
    }
    // Public methods


  // Protected methods
  protected:

  // Private methods
  private:
};

#endif // MapResource_h
